syntax = "proto3";

import "google/protobuf/timestamp.proto";

package auctions;

service AuctionItemService {
  rpc getAuctionInfo (AuctionRequest) returns (AuctionResponse);
  rpc FindAllNotActiveUserInChatRoom (ParticipationRequest) returns (ParticipationResponse);
  rpc bidAuction (BiddingRequest) returns (BiddingResponse);
}

message AuctionRequest {
  int64 auctionRoomId = 1;
}

message AuctionResponse {
  int32 bidStartPrice = 1;
  ItemResponse itemResponses = 2;
  repeated BidRuleResponse bidRuleResponses = 3;
  google.protobuf.Timestamp beginDateTime = 4;
  google.protobuf.Timestamp closeDateTime = 5;
  int64 auctionId = 6;
}

message ItemResponse {
  string title = 1;
  int32 price = 2;
  string content = 3;
}

message BidRuleResponse {
  string name = 1;
  string description = 2;
  string ruleValue = 3;
}

message ParticipationRequest {
  int64 roomId = 1;
  int64 senderId = 2;
}

message ParticipationResponse {
  repeated int64 writerId = 1;
}

message BiddingRequest {
  int64 auctionId = 1;
  int64 bidderId = 2;
  string bidAmount = 3;
  google.protobuf.Timestamp biddingTime = 4;
}

message BiddingResponse {
  int64 biddingId = 1;
}